1. 取消首次使用弹出配置界面； 2. 取消广告，防止无法访问正常访问广告时，无法记录已经弹出过配置界面的问题；

--- a/options.html
+++ b/options.html
@@ -115,7 +115,7 @@
 				Developed by:
 				<span>Shaun Tabone</span> 
 			</a>
-			<iframe src="http://xontab.com/advert.html" width="210" height="650" />
+			<!-- <iframe src="http://xontab.com/advert.html" width="210" height="650" /> -->
 		</div>
 	</div>
 </body>
